# memoryd

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  CANARY_SCORECARD.md  HERMES_INSTALL_PROMPT.md  PRODUCTION_ROLLOUT.md  REFERENCE.md
hermes_plugin/memoryd/: cli.py  (+4 more)
hooks/: capture_hook.sh  recall_hook.sh  settings.snippet.json
memoryd/: __init__.py  __main__.py  adapters.py  backup.py  cli.py  contracts.py  core.py  doctor.py  embed.py  evaluator.py  extract.py  hermes_compat.py  hermes_install.py  hook.py  ingest.py  llm.py  microsleep.py  model_gateway.py  ownership.py  policies.py  recall.py  review.py  semantic_policies.py  server.py  source_pack.py  spool.py
migrations/: 001_init.sql  002_extraction.sql  003_multi_agent.sql  004_quarantine_event.sql  005_bitter_lesson.sql  006_durable_capture.sql  007_api_request_ledger.sql
scripts/: check_hermes_contract.py  init_db.sh  smoke_test.py  test_bitter_lesson.py  test_durable_capture.py  test_extract.py  test_hermes.py  test_hermes_contract.py  test_hermes_spool.py  test_postgres_recovery.py  test_vector.py  validate_installed_hermes.py
tests/: test_backup.py  test_ci_matrix.py  test_cli.py  test_hermes_activation.py  test_hermes_compat.py  test_hermes_install.py  test_hermes_orchestration.py  test_hermes_validation_integration.py  test_install_backup_units.py  test_ownership.py  test_packaged_hermes_validation.py  test_release_runbooks.py  test_validate_installed_hermes.py
(+11 files in other folders)
